--- a/servlet-base/pom.xml
+++ b/servlet-base/pom.xml
@@ -37,6 +37,11 @@
       <version>4.2-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+      <groupId>edu.rpi.tw.escience</groupId>
+      <artifactId>semanteco-user-json</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>rhino</groupId>
       <artifactId>js</artifactId>
